# panda3d-krender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  krender_tests.h  meta.yaml  run_test.py  setup.py
krender/: CMakeLists.txt  defines.h
krender/core/: CMakeLists.txt  config.cxx  config.h  depth_pass.cxx  depth_pass.h  helpers.cxx  helpers.h  instance.cxx  instance.h  light.h  light_data.h  lighting_pipeline.cxx  lighting_pipeline.h  post_pass.cxx  post_pass.h  progress_bar.cxx  progress_bar.h  render_pass.cxx  render_pass.h  render_pipeline.cxx  render_pipeline.h  scene_pass.cxx  scene_pass.h  shadow_source.h
krender/shader/: CMakeLists.txt  base.inc.frag.glsl  base.inc.glsl  bloom.frag.glsl  bloom.vert.glsl  blur.inc.frag.glsl  default.frag.glsl  default.vert.glsl  defines.inc.glsl  dof.frag.glsl  shading.inc.frag.glsl  shadow.frag.glsl  shadow.vert.glsl
samples/: monkey.egg.pz  room.py
